--- a/ms.tex
+++ b/ms.tex
@@ -9,6 +9,13 @@
 \usepackage{framed}
 
 \shortauthors{Y. Hezaveh}
+
+\usepackage{color}
+\newcommand{\blue}{\textcolor{blue}}
+\newcommand{\green}{\textcolor{green}}
+\newcommand{\red}{\textcolor{red}}
+
+
 \begin{document}
 
 \title{Probing the inner kpc of massive galaxies with strong gravitational lensing}
@@ -54,27 +61,36 @@ Such measurements, are, however have been limited to low redshifts, since both d
 % ... whatever the mechanisms are, clear measurements of the central densities can be valuable to solve this puzzle and to shed light on the connection of SMBHs and galaxies. 
 %\end{framed}
 
+%\begin{framed}
+Strong gravitational lensing is a powerful tool for probing matter distribution in distant galaxies. Among other things, strong lenses have been used to constrain galaxy masses  \citep[e.g.][]{}, density profiles \citep[e.g.][]{}, and abundance of dark matter subhalos \citep[e.g.][]{}.
+Strong lensing formalism indicates that the number of lensed images should always be odd. For double and quad image configurations, a third and a fifth image are predicted to exist near the centers of lensing galaxies. Unlike the other lensed images, which are magnified, this image can be significantly \emph{demagnified}, making its detection difficult.  It is well-understood that the magnification of the central images is very sensitive to the matter distribution in the innermost regions of lens galaxies: very steep singular density profiles significantly demagnify the central images, whereas cored or shallow profiles render them brighter. %Lack of detection of central images in almost all lenses suggests steep central density profiles in lens galaxies. 
+In addition to their low flux, the fact that central images coincide with the emission from lens galaxies makes their detection even harder.
+If observed in optical, absorption in the central dense regions of the lens make the central images even dimmer, while the photon noise from the lens emission further reduces the sensitivity. Moreover, distinguishing the central images from emission originating in the lens galaxies is extremely  challenging.
+
+
+%5) Additionally, another reason for lack of detection is that the central image is located at the center of the lensing galaxy, where i) the sensitivity is lower, due to photon noise of the lens ii) it is difficult to distinguish the flux of the central image from the emission from the lens. iii) if in optical, since they pass through the centers of galaxies there's a high chance of large absorption (in the lens)
+
+%Such central images, however, have been very rarely detected, suggesting that steep density profiles of galaxies render them 
+%4) typically only an even number of images are observed,  suggesting that the central images are demagnified below the sensitivity of instruments. \\ \\
+
+%\end{framed}
+
+
 \begin{framed}
-Strong gravitational lensing is a powerful tool for mapping out matter distribution. Among other things, strong lenses have been used to constrain galaxy masses  \citep[e.g.][]{}, density profiles \citep[][]{}, abundance of dark matter subhalos \citep[][]{}, etc. 
-\\ \\
-3) Strong lensing formalism, predicts an odd number of images, with a central image that is \emph{demagnified} \\ \\
-4) it has been known that the flux (i.e. demagnification) of the central image is very sensitive to the very inner regions of the density profiles: very peaky, singular density profiles, demagnify the image by very large amounts, whereas cored or shallow profile will result in bright central images. \\ \\
+\red{needs work}
+The individual behavior \citep{} and statistical properties of central images in lens populations have been extensively studied (e.g. Wallington 1993, Evans \& Hunter 2002, Keeton 2003),  suggesting that central images could have a wide range of magnifications. 
+Observational searches for these images have found a number of candidates \citep[e.g.][]{}, however, only one secure detection of a central image exists to date \citep{winn:2004}.
+To avoid the possibility of absorption in the lens, most studies have focused on strongly lensed radio quasars and the radio spectrum of candidate central images have been used to distinguish them from faint emission from the lens galaxies.
 
-4) typically only an even number of images are observed,  suggesting that the central images are demagnified below the sensitivity of instruments. \\ \\
+%To avoid confusion between a central image and faint radio emission from the lens galaxies 
 
-5) Additionally, another reason for lack of detection is that the central image is located at the center of the lensing galaxy, where i) the sensitivity is lower, due to photon noise of the lens ii) it is difficult to distinguish the flux of the central image from the emission from the lens. iii) if in optical, since they pass through the centers of galaxies there's a high chance of large absorption (in the lens)
-\end{framed}
-
-
-\begin{framed}
-a review of central image observations and studies:\\ \\
-
-1) The individual and statistical properties of central images have been previously studied. (e.g. Wallington 1993, Evans \& Hunter 2002, Keeton 2003, ) \\ \\
-2) to avoid absorption by, and lack of contamination from the main lens, past studies focused on radio lens quasars. \\ \\
-3) for example, Rusin \&  Ma 2001 set constrains on the inner profiles of lens galaxies form observations of six two-image radio-loud lens systems \\ \\
-4) confusion between a central image, and faint radio emission from the lens galaxy, could be avoided by studying the radio spectrum of a candidate central image.   
-5) the only secure detection of a central image (based on its radio spectrum)  in a galaxy-mass lensing system, is PMNJ 1632?0033 (Winn et al. 2002, 2003, 2004),   \\ \\
-6) Winn et al 2004 used the detection of this central image to place constraints on the mass of the central SMBH.
+%a review of central image observations and studies:\\ \\
+%1) The individual and statistical properties of central images have been previously studied. (e.g. Wallington 1993, Evans \& Hunter 2002, Keeton 2003, ) \\ \\
+%2) to avoid absorption by, and lack of contamination from the main lens, past studies focused on radio lens quasars. \\ \\
+%3) for example, Rusin \&  Ma 2001 set constrains on the inner profiles of lens galaxies form observations of six two-image radio-loud lens systems \\ \\
+%4) confusion between a central image, and faint radio emission from the lens galaxy, could be avoided by studying the radio spectrum of a candidate central image.   
+%5) the only secure detection of a central image (based on its radio spectrum)  in a galaxy-mass lensing system, is PMNJ 1632?0033 (Winn et al. 2002, 2003, 2004),   \\ \\
+%6) Winn et al 2004 used the detection of this central image to place constraints on the mass of the central SMBH.
 \end{framed}
 
 
