--- a/ms.tex
+++ b/ms.tex
@@ -76,7 +76,7 @@ If observed in optical, absorption in the central dense regions of the lens make
 %\end{framed}
 
 
-\begin{framed}
+%\begin{framed}
 \red{needs work}
 The individual behavior \citep{} and statistical properties of central images in lens populations have been extensively studied (e.g. Wallington 1993, Evans \& Hunter 2002, Keeton 2003),  suggesting that central images could have a wide range of magnifications. 
 Observational searches for these images have found a number of candidates \citep[e.g.][]{}, however, only one secure detection of a central image exists to date \citep{winn:2004}.
@@ -91,26 +91,40 @@ To avoid the possibility of absorption in the lens, most studies have focused on
 %4) confusion between a central image, and faint radio emission from the lens galaxy, could be avoided by studying the radio spectrum of a candidate central image.   
 %5) the only secure detection of a central image (based on its radio spectrum)  in a galaxy-mass lensing system, is PMNJ 1632?0033 (Winn et al. 2002, 2003, 2004),   \\ \\
 %6) Winn et al 2004 used the detection of this central image to place constraints on the mass of the central SMBH.
-\end{framed}
+%\end{framed}
 
 
-\begin{framed}
-Describe the newly discovered population of mm lenses + ALMA's observations: \\  \\
-1) strong lenses in mm were discovered (SPT, Herschel, etc.) \\ \\
-2) ALMA observations confirmed that they're all lensed and that the sources are at high z \\ \\
-3) because they were selected by flux, + the high sensitivity of ALMA $->$ SNR is high \\ \\
-3B) we note that in a 10 hr long observation ALMA can achieve a sensitivity of order 0.0164 mJy in a 500 km/s bandwidth, since the background sources have typical (intrinsic) average line fluxes of order 2-3 mJy, such observations will be able to detect images with magnification as low as $10^{-2}$ \\ \\
-4) the sources have many molecular lines. If a central image of a \emph{molecular line} is observed it will be easily identifiable since it corresponds to the redshift of the source, and there will be no confusion that it may be associated with the lens. \\ \\
-5) since these lines are in mm, there's very little (if any) absorption in the lens, so the flux doesn't decrease due to absorption
-\end{framed}
+%\begin{framed}
+A new large population of strong lenses has recently been discovered \citep{}. These systems were initially discovered as bright point sources in wide area mm/submm surveys \citep{}. Follow-up observations have confirmed that they constitute a large population of strong lenses \citep{}.
+In particular, ALMA observations of these sources has revealed that the background galaxies are starburst, high redshift galaxies, containing a wealth of cold molecular gas \cite{}.  These observations proved that the extremely high flux of the sources in combination with the high sensitivity of ALMA results in a very high signal to noise ratios (the lens models in Hezaveh et al 2013 were based on $\sim50$ s-long observations).
+Motivated by the discovery of this population and the operation of ALMA, in this letter we revisit the issue of detecting central images.
+Deep ALMA observations of molecular lines in these sources are likely to be carried out for various reasons (e.g. power spectrum of dark matter, measuring the mass of SMBH in background galaxies). If a central image of a lensed molecular line is detected, it will be readily identifiable since it will correspond to the redshift of the source, leaving no doubt about its origin. In addition, since these lines are in mm-bands, the line fluxes are very unlikely to be suppressed due to absorption in the lens. 
 
-\begin{framed}
-motivation and description of the paper: \\ \\
-1) Long ALMA observations of these molecular lines are likely to be carried out for various reasons (e.g. power spectrum of dark matter, measuring the mass of background black holes) .  \\ \\
-2) In this paper we explore the possibility of detection of these central images in such deep observations, and investigate what we could learn about the innermost regions of galaxies from detection or non-detection of such central images.\\ \\
-3) the paper is organized as: section 2 describes the simulations, section 3 presents the results and discuss them and conclude in section 5 \\ \\
-4) we use $\Lambda$CDM cosmology of XXX
-\end{framed}
+%doesn't decrease due to absorption
+%little (if any) absorption in the lens, so the flux doesn't decrease due to absorption
+%Since the sources have many molecular lines. 
+%Describe the newly discovered population of mm lenses + ALMA's observations: \\  \\
+%1) strong lenses in mm were discovered (SPT, Herschel, etc.) \\ \\
+%2) ALMA observations confirmed that they're all lensed and that the sources are at high z \\ \\
+%3) because they were selected by flux, + the high sensitivity of ALMA $->$ SNR is high \\ \\
+%3B) we note that in a 10 hr long observation ALMA can achieve a sensitivity of order 0.0164 mJy in a 500 km/s bandwidth, since the background sources have typical (intrinsic) average line fluxes of order 2-3 mJy, such observations will be able to detect images with magnification as low as $10^{-2}$ \\ \\
+%4) the sources have many molecular lines. If a central image of a \emph{molecular line} is observed it will be easily identifiable since it corresponds to the redshift of the source, and there will be no confusion that it may be associated with the lens. \\ \\
+%5) since these lines are in mm, there's very little (if any) absorption in the lens, so the flux doesn't decrease due to absorption
+%\end{framed}
+
+ In this letter, we explore the possibility of detecting the central lensed images in such deep observations and investigate the constraints that could be placed on the core size, mass of SMBHs, and the slope of the density profiles from detection, or non-detection of such images. In Section 2 we describe the simulations, in Section 3 we present the results and discuss them, and finally conclude in Section 4. We use a flat $\Lambda$CDM cosmology with $h=0.71$ and $\Omega_M=0.267$.
+ 
+% the distribution of matter in the innermost regions of galaxies from detection or non-detection of such central images.\\ \\
+%3) the paper is organized as: section 2 describes the simulations, section 3 presents the results and discuss them and conclude in section 5 \\ \\
+%4) we use $\Lambda$CDM cosmology of XXX
+
+%\begin{framed}
+%motivation and description of the paper: \\ \\
+%1) Long ALMA observations of these molecular lines are likely to be carried out for various reasons (e.g. power spectrum of dark matter, measuring the mass of background black holes) .  \\ \\
+%2) In this paper we explore the possibility of detection of these central images in such deep observations, and investigate what we could learn about the innermost regions of galaxies from detection or non-detection of such central images.\\ \\
+%3) the paper is organized as: section 2 describes the simulations, section 3 presents the results and discuss them and conclude in section 5 \\ \\
+%4) we use $\Lambda$CDM cosmology of XXX
+%\end{framed}
 
 \section{Simulations}
 \begin{framed} description
