--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,137 @@
+@ARTICLE{Inada:08,
+   author = {{Inada}, N. and {Oguri}, M. and {Falco}, E.~E. and {Broadhurst}, T.~J. and 
+	{Ofek}, E.~O. and {Kochanek}, C.~S. and {Sharon}, K. and {Smith}, G.~P.
+	},
+    title = "{Spectroscopic Confirmation of the Fifth Image of SDSS J1004+4112 and Implications for the M$_{BH}$--{$\sigma$}$_{*}$ Relation at z = 0.68}",
+  journal = {\pasj},
+archivePrefix = "arXiv",
+   eprint = {0808.1769},
+ keywords = {black hole physics, galaxies: elliptical and lenticular, cD, galaxies: quasars: individual (SDSS J1004+4112), gravitational lensing},
+     year = 2008,
+    month = oct,
+   volume = 60,
+    pages = {L27},
+      doi = {10.1093/pasj/60.5.L27},
+   adsurl = {http://adsabs.harvard.edu/abs/2008PASJ...60L..27I},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Inada:05,
+   author = {{Inada}, N. and {Oguri}, M. and {Keeton}, C.~R. and {Eisenstein}, D.~J. and 
+	{Castander}, F.~J. and {Chiu}, K. and {Hall}, P.~B. and {Hennawi}, J.~F. and 
+	{Johnston}, D.~E. and {Pindor}, B. and {Richards}, G.~T. and 
+	{Rix}, H.-W.~R. and {Schneider}, D.~P. and {Zheng}, W.},
+    title = "{Discovery of a Fifth Image of the Large Separation Gravitationally Lensed Quasar SDSS J1004+4112}",
+  journal = {\pasj},
+   eprint = {astro-ph/0503310},
+ keywords = {galaxies: quasars: individual (SDSS J1004 + 4112), galaxies: structure, gravitational lensing},
+     year = 2005,
+    month = jun,
+   volume = 57,
+    pages = {L7-L10},
+      doi = {10.1093/pasj/57.3.L7},
+   adsurl = {http://adsabs.harvard.edu/abs/2005PASJ...57L...7I},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Winn:04,
+   author = {{Winn}, J.~N. and {Rusin}, D. and {Kochanek}, C.~S.},
+    title = "{The central image of a gravitationally lensed quasar}",
+  journal = {\nat},
+   eprint = {astro-ph/0312136},
+     year = 2004,
+    month = feb,
+   volume = 427,
+    pages = {613-615},
+   adsurl = {http://adsabs.harvard.edu/abs/2004Natur.427..613W},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Evans:02,
+   author = {{Evans}, N.~W. and {Hunter}, C.},
+    title = "{Lensing Properties of Cored Galaxy Models}",
+  journal = {\apj},
+   eprint = {astro-ph/0204206},
+ keywords = {Galaxies: Halos, Galaxies: Kinematics and Dynamics, Galaxies: Structure, Cosmology: Gravitational Lensing},
+     year = 2002,
+    month = aug,
+   volume = 575,
+    pages = {68-86},
+      doi = {10.1086/341214},
+   adsurl = {http://adsabs.harvard.edu/abs/2002ApJ...575...68E},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Wallington:93,
+   author = {{Wallington}, S. and {Narayan}, R.},
+    title = "{The influence of core radius on gravitational lensing by elliptical lenses}",
+  journal = {\apj},
+ keywords = {Ellipticity, Galactic Structure, Gravitational Lenses, Quasars, Astronomical Models, Bl Lacertae Objects, Computational Astrophysics, Image Analysis},
+     year = 1993,
+    month = feb,
+   volume = 403,
+    pages = {517-529},
+      doi = {10.1086/172222},
+   adsurl = {http://adsabs.harvard.edu/abs/1993ApJ...403..517W},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Rusin:01,
+   author = {{Rusin}, D. and {Ma}, C.-P.},
+    title = "{Constraints on the Inner Mass Profiles of Lensing Galaxies from Missing Odd Images}",
+  journal = {\apjl},
+   eprint = {astro-ph/0009079},
+ keywords = {Galaxies: Structure, Cosmology: Gravitational Lensing},
+     year = 2001,
+    month = mar,
+   volume = 549,
+    pages = {L33-L37},
+      doi = {10.1086/319129},
+   adsurl = {http://adsabs.harvard.edu/abs/2001ApJ...549L..33R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Keeton:03,
+   author = {{Keeton}, C.~R.},
+    title = "{Lensing and the Centers of Distant Early-Type Galaxies}",
+  journal = {\apj},
+   eprint = {astro-ph/0206243},
+ keywords = {Galaxies: Elliptical and Lenticular, cD, Galaxies: Nuclei, Galaxies: Structure, Cosmology: Gravitational Lensing},
+     year = 2003,
+    month = jan,
+   volume = 582,
+    pages = {17-29},
+      doi = {10.1086/344539},
+   adsurl = {http://adsabs.harvard.edu/abs/2003ApJ...582...17K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Thomas:14,
+   author = {{Thomas}, J. and {Saglia}, R.~P. and {Bender}, R. and {Erwin}, P. and 
+	{Fabricius}, M.},
+    title = "{The Dynamical Fingerprint of Core Scouring in Massive Elliptical Galaxies}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1311.3783},
+ primaryClass = "astro-ph.GA",
+ keywords = {galaxies: elliptical and lenticular, cD, galaxies: evolution, galaxies: kinematics and dynamics, galaxies: structure },
+     year = 2014,
+    month = feb,
+   volume = 782,
+      eid = {39},
+    pages = {39},
+      doi = {10.1088/0004-637X/782/1/39},
+   adsurl = {http://adsabs.harvard.edu/abs/2014ApJ...782...39T},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
 @ARTICLE{hopkins:12,
    author = {{Hopkins}, P.~F. and {Kere{\v s}}, D. and {Murray}, N. and {Quataert}, E. and 
 	{Hernquist}, L.},
